# hauberk

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yaml
docs/: Makefile  conf.py  hauberk.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
src/hauberk/: __init__.py  actions.py  cli.py  core.py  filters.py  flags.py  log.py  logic.py
tests/: conftest.py  test_actions.py  test_cli.py  test_filters.py  test_hauberk.py  test_logic.py
