[tool.poetry]
name = "hauberk"
version = "0.1.0"
description = "Hauberk allows you to create advanced email automations using Python"
authors = ["Andrew Kail <andrew.a.kail@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
IMAPClient = "^2.3.1"
colorlog = "^6.7.0"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
sphinx = "^5.3.0"
bumpversion = "^0.6.0"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
pytest-runner = "^6.0.0"
twine = "^4.0.2"
tox = "^4.0.8"
watchdog = "^2.2.0"
wheel = "^0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
